Inline api documentation
